# XRAY-Simulation

./: .gitignore  CMakeLists.txt
main_project/: CFrameBuffer.h  CFramebuffer.cpp  CMakeLists.txt  Camera.hpp  Shader.hpp  Shaderprogram.cpp  Shaderprogram.hpp  backface.frag  backface.vert  bighybridraycasting.frag  geometry.hpp  heart.tfi  hybridrendering.hpp  lamp.vs  main.cpp  mesh.frag  mesh.vert  normcasting.frag  raycasting.frag  raycasting.vert  raypoisition.frag  raypoisition.vert  realhybrid.cpp  realhybrid.hpp  transfer_function.tfi  volumgeometry.hpp
opengl_helper/x86/libs/: SOIL.lib  SOIL_D.lib  SOIL_R.lib
